cpu logic to avoid player added, display for point bonus adjusted to avoid overlapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -132,6 +132,11 @@ body {
   background-color: lightslategray;
 }
 
+
+.cell.vision {
+  background-color: white;
+}
+
 .flicker {
   animation: flicker 0.5s infinite;
 }
